tests/baselines/reference/missingCloseBraceInEnum.errors.txt
tests/cases/compiler/missingCloseBraceInEnum.ts(6,1): error TS1005: '}' expected.


==== tests/cases/compiler/missingCloseBraceInEnum.ts (1 errors) ====
    enum Colors {
      Red,
      Green,
      Blue,
    
    
    
!!! error TS1005: '}' expected.
!!! related TS1007 tests/cases/compiler/missingCloseBraceInEnum.ts:1:13: The parser expected to find a '}' to match the '{' token here.